# there-i-fixed-it

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  docker-compose.yaml
.github/workflows/: binary-release.yml  helpers.py  nitpick.yml  rust.yml
src/: arguments.rs  constants.rs  main.rs
src/plan/: executor.rs  glob_pattern.rs  mod.rs
src/providers/: constants.rs  github.rs  mod.rs  tests.rs
tests/: create-test-repository.sh
tests/fixtures/: simple-plan.toml
tests/fixtures/wiremock/github/: list-repositories.json
tests/fixtures/wiremock/mappings/github/: list-pull-requests.json  open-pr.json
tests/stub-server/: Cargo.toml
tests/stub-server/src/: github.rs  lib.rs
