[package]
name = "there-i-fixed-it"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"
repository = "https://github.com/jaysonsantos/there-i-fixed-it"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.48"
camino = "1.0.3"
color-eyre = "0.5.10"
directories = "3.0.1"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1.4.5"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_regex = "1.1.0"
structopt = "0.3.21"
tokio = { version = "1.3.0", features = ["full"] }
toml = { version = "0.5.8" }
tracing = "0.1.25"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }

[dev-dependencies]
stub-server = { path = "tests/stub-server" }
tempdir = "0.3.7"
