[package]
name = "stub-server"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"
tide = { version = "0.16.0", features = [
    "h1-server"
], default-features = false } # Avoid getting logger as span traces should suffice.
tokio = { version = "1.3.0", features = ["test-util"] }
serde = { version = "1.0.124", features = ["derive"] }
