[package]
name = "stub-server"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = "0.5.10"
lazy_static = "1.4.0"
reqwest = "0.11.2"
tokio = "1.4.0"
tracing = "0.1.25"
